configurators refactor