@@ -7,26 +7,23 @@ import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.FloatTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.Tag;
-import net.minecraft.world.phys.Vec2;
 import net.neoforged.neoforge.common.util.INBTSerializable;
+import org.joml.Vector2f;
 
+import javax.annotation.Nonnull;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
-/**
- * @author KilaBash
- * @date 2023/5/30
- * @implNote Gradient
- */
 public class GradientColor implements INBTSerializable<CompoundTag> {
     @Getter
-    protected List<Vec2> aP, rP, gP, bP;
+    protected List<Vector2f> aP, rP, gP, bP;
 
     public GradientColor() {
-        this.aP = new ArrayList<>(List.of(new Vec2(0, 1), new Vec2(1, 1)));
-        this.rP = new ArrayList<>(List.of(new Vec2(0, 1), new Vec2(1, 1)));
-        this.gP = new ArrayList<>(List.of(new Vec2(0, 1), new Vec2(1, 1)));
-        this.bP = new ArrayList<>(List.of(new Vec2(0, 1), new Vec2(1, 1)));
+        this.aP = new ArrayList<>(List.of(new Vector2f(0, 1), new Vector2f(1, 1)));
+        this.rP = new ArrayList<>(List.of(new Vector2f(0, 1), new Vector2f(1, 1)));
+        this.gP = new ArrayList<>(List.of(new Vector2f(0, 1), new Vector2f(1, 1)));
+        this.bP = new ArrayList<>(List.of(new Vector2f(0, 1), new Vector2f(1, 1)));
     }
 
     public GradientColor(int... colors) {
@@ -35,23 +32,23 @@ public class GradientColor implements INBTSerializable<CompoundTag> {
         this.gP = new ArrayList<>();
         this.bP = new ArrayList<>();
         if (colors.length == 1) {
-            this.aP.add(new Vec2(0.5f, ColorUtils.alpha(colors[0])));
-            this.rP.add(new Vec2(0.5f, ColorUtils.red(colors[0])));
-            this.gP.add(new Vec2(0.5f, ColorUtils.green(colors[0])));
-            this.bP.add(new Vec2(0.5f, ColorUtils.blue(colors[0])));
+            this.aP.add(new Vector2f(0.5f, ColorUtils.alpha(colors[0])));
+            this.rP.add(new Vector2f(0.5f, ColorUtils.red(colors[0])));
+            this.gP.add(new Vector2f(0.5f, ColorUtils.green(colors[0])));
+            this.bP.add(new Vector2f(0.5f, ColorUtils.blue(colors[0])));
         }
         for (int i = 0; i < colors.length; i++) {
             var t = i / (colors.length - 1f);
-            this.aP.add(new Vec2(t, ColorUtils.alpha(colors[i])));
-            this.rP.add(new Vec2(t, ColorUtils.red(colors[i])));
-            this.gP.add(new Vec2(t, ColorUtils.green(colors[i])));
-            this.bP.add(new Vec2(t, ColorUtils.blue(colors[i])));
+            this.aP.add(new Vector2f(t, ColorUtils.alpha(colors[i])));
+            this.rP.add(new Vector2f(t, ColorUtils.red(colors[i])));
+            this.gP.add(new Vector2f(t, ColorUtils.green(colors[i])));
+            this.bP.add(new Vector2f(t, ColorUtils.blue(colors[i])));
         }
     }
 
-    public float get(List<Vec2> data, float t) {
-        var value = data.get(0).y;
-        var found = t < data.get(0).x;
+    public float get(List<Vector2f> data, float t) {
+        var value = data.getFirst().y;
+        var found = t < data.getFirst().x;
         if (!found) {
             for (int i = 0; i < data.size() - 1; i++) {
                 var s = data.get(i);
@@ -64,7 +61,7 @@ public class GradientColor implements INBTSerializable<CompoundTag> {
             }
         }
         if (!found) {
-            value = data.get(data.size() - 1).y;
+            value = data.getLast().y;
         }
         return value;
     }
@@ -77,22 +74,22 @@ public class GradientColor implements INBTSerializable<CompoundTag> {
         return ColorUtils.color(1, get(rP, t), get(gP, t), get(bP, t));
     }
 
-    public int add(List<Vec2> data, float t, float value) {
-        if (data.size() == 0) {
-            data.add(new Vec2(t, value));
+    public int add(List<Vector2f> data, float t, float value) {
+        if (data.isEmpty()) {
+            data.add(new Vector2f(t, value));
             return 0;
         }
-        if (t < data.get(0).x) {
-            data.add(0, new Vec2(t, value));
+        if (t < data.getFirst().x) {
+            data.addFirst(new Vector2f(t, value));
             return 0;
         }
         for (int i = 0; i < data.size() - 1; i++) {
             if (t >= data.get(i).x && t <=  data.get(i + 1).x) {
-                data.add(i + 1, new Vec2(t, value));
+                data.add(i + 1, new Vector2f(t, value));
                 return i + 1;
             }
         }
-        data.add(new Vec2(t, value));
+        data.add(new Vector2f(t, value));
         return data.size() - 1;
     }
 
@@ -106,24 +103,24 @@ public class GradientColor implements INBTSerializable<CompoundTag> {
         return add(bP, t, b);
     }
 
-    private ListTag saveAsTag(List<Vec2> data) {
+    private ListTag saveAsTag(List<Vector2f> data) {
         var list = new ListTag();
-        for (Vec2 vec2 : data) {
-            list.add(FloatTag.valueOf(vec2.x));
-            list.add(FloatTag.valueOf(vec2.y));
+        for (Vector2f Vector2f : data) {
+            list.add(FloatTag.valueOf(Vector2f.x));
+            list.add(FloatTag.valueOf(Vector2f.y));
         }
         return list;
     }
 
-    private void loadFromTag(List<Vec2> data, ListTag list) {
+    private void loadFromTag(List<Vector2f> data, ListTag list) {
         data.clear();
         for (int i = 0; i < list.size(); i += 2) {
-            data.add(new Vec2(list.getFloat(i), list.getFloat(i + 1)));
+            data.add(new Vector2f(list.getFloat(i), list.getFloat(i + 1)));
         }
     }
 
     @Override
-    public CompoundTag serializeNBT(HolderLookup.Provider provider) {
+    public CompoundTag serializeNBT(@Nonnull HolderLookup.Provider provider) {
         var tag = new CompoundTag();
         tag.put("a", saveAsTag(aP));
         tag.put("r", saveAsTag(rP));
@@ -133,10 +130,30 @@ public class GradientColor implements INBTSerializable<CompoundTag> {
     }
 
     @Override
-    public void deserializeNBT(HolderLookup.Provider provider, CompoundTag nbt) {
+    public void deserializeNBT(@Nonnull HolderLookup.Provider provider, CompoundTag nbt) {
         loadFromTag(aP, nbt.getList("a", Tag.TAG_FLOAT));
         loadFromTag(rP, nbt.getList("r", Tag.TAG_FLOAT));
         loadFromTag(gP, nbt.getList("g", Tag.TAG_FLOAT));
         loadFromTag(bP, nbt.getList("b", Tag.TAG_FLOAT));
+    }
+    
+    public GradientColor copy() {
+        var copy = new GradientColor();
+        copy.aP.clear();
+        copy.rP.clear();
+        copy.gP.clear();
+        copy.bP.clear();
+        this.aP.forEach(Vector2f -> copy.aP.add(new Vector2f(Vector2f.x, Vector2f.y)));
+        this.rP.forEach(Vector2f -> copy.rP.add(new Vector2f(Vector2f.x, Vector2f.y)));
+        this.gP.forEach(Vector2f -> copy.gP.add(new Vector2f(Vector2f.x, Vector2f.y)));
+        this.bP.forEach(Vector2f -> copy.bP.add(new Vector2f(Vector2f.x, Vector2f.y)));
+        return copy;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (o == null || getClass() != o.getClass()) return false;
+        GradientColor that = (GradientColor) o;
+        return Objects.equals(aP, that.aP) && Objects.equals(rP, that.rP) && Objects.equals(gP, that.gP) && Objects.equals(bP, that.bP);
     }
 }
